Fixed alignment issues and added hovers

--- a/css/about.css
+++ b/css/about.css
@@ -72,29 +72,29 @@ header{
     justify-content:flex-start;
     flex-wrap:wrap;
     height:300px;
-    width:100%;
-    margin-bottom:2vh;
+    width:80%;
+    margin:0 auto;
 }
 
 .logo{
-    margin-top:50px;
-    margin-left:30px;
-    margin-bottom:24px;
+    margin-top:25px;
+    margin-bottom:20px;
     height:50px;
 }
 
 .jumbo-about{
     margin:0 auto;
-    height:30vh;
-    width:97%;
+    height:20vh;
+    width:100%;
 }
 
 header nav{
     display:flex;
-    justify-content:space-between;
+    justify-content:space-around;
     align-items:flex-end;
+    margin-left:20px;
+    height:75px;
     width:70%;
-    padding:15px;
 }
 
 header nav a{
@@ -103,20 +103,17 @@ header nav a{
     align-items:center;
     color:black;
     text-decoration:none;
-    padding:1px 20px 10px 20px;
 }
 
 .container{
-    width:800px;
+    width:100%;
     margin:0 auto;
 }
 
 .container-about-page{
-    margin-top:100px;
-    padding-left:50px;
-    padding-right:50px;
     height:155vh;
-    width:100%;
+    width:80%;
+    margin:0 auto;
 }
 
 .about-section{
@@ -126,22 +123,29 @@ header nav a{
     align-items:flex-start;
     border-bottom:1px dotted black;
     height:15vh;
-    width:90%;
-    margin-left:30px;
+    width:100%;
+    padding-bottom:20px;
     margin-bottom:20px;
 }
 
+.about-section h2{
+    margin-left:20px;
+}
+
 .about-text{
-    padding-top:5px;
-    padding-bottom:20px;
-    margin-left:10px;
-    margin-bottom:20px;
+    display:flex;
+    justify-content:flex-start;
+    align-items:center;
+    padding-right:20px;
+    height:100px;
+    width:95%;
+    margin-left:20px;
 }
 
 .flex_section{
     height:1000px;
-    width:90%;
-    margin-left:30px;
+    width:95%;
+    margin-left:20px;
 }
 
 .top_half{
@@ -165,7 +169,6 @@ header nav a{
 }
 
 .images{
-    padding:10px;
     height:250px;
     width:100%;
 }
@@ -175,7 +178,6 @@ h2{
     justify-content:flex-start;
     align-items:center;
     margin-bottom:-5px;
-    padding:10px;
     height:50px;
     width:300px;
 }
@@ -184,7 +186,6 @@ h2{
     display:flex;
     justify-content:flex-start;
     flex-wrap:wrap;
-    padding:10px;
     height:100px;
     width:100%;
 }
@@ -194,11 +195,26 @@ h2{
     justify-content:center;
     align-items:center;
     border:2px solid black;
-    padding:10px;
-    margin:10px;
     border-radius:10px;
     height:50px;
     width:150px;
+    margin-bottom:10px;
+}
+
+.learn_more a{
+    text-decoration:none;
+    color:black;
+}
+
+.learn_more:hover{
+    background-color:black;
+    border-color:white;
+    transition:.3s;
+    cursor:pointer;
+}
+
+.learn_more a:hover{
+    color:white;
 }
 
 .sections{
@@ -209,23 +225,26 @@ h2{
     margin-right:20px;
     padding-bottom:10px;
     height:450px;
-    width:50%;
+    width:48%;
 }
 
 #last_section{
     display:flex;
     flex-direction:column;
-    justify-content:center;
+    justify-content:flex-start;
     align-items:flex-start;
     height:15vh;
-    width:95%;
-    margin-left:30px;
+    width:100%;
     margin-bottom:20px;
+}
+
+#last_section h2{
+    margin-left:20px;
 }
 
 footer {
     margin:0 auto;
-    width: 97%;
+    width: 80%;
     background: black;
 }
 
@@ -241,4 +260,9 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+footer nav a:hover{
+    background-color:white;
+    color:black;
 }
